# xoreos-tools

./: README.md
oldlibeos/: AUTHORS  configure.ac
oldlibeos/lib/: Makefile.am  action.cpp  area.cpp  biffile.cpp  binreadwrite.cpp  bitfield.cpp  creature.cpp  dialog.cpp  door.cpp  effect.cpp  encounter.cpp  eos.h  erffile.cpp  errorhandler.cpp  event.cpp  faction.cpp  gamedefaults.cpp  gfffile.cpp  item.cpp  journal.cpp  keyfile.cpp  memseg.cpp  module.cpp  moduleifo.cpp  nwnfile.cpp  palette.cpp  placeable.cpp  scriptevent.cpp  scriptsituation.cpp  situated.cpp  sound.cpp  ssffile.cpp  store.cpp  tlkfile.cpp  trigger.cpp  turd.cpp  twodafile.cpp  variable.cpp  vartable.cpp  waypoint.cpp
oldlibeos/src/: Makefile.am  assemble.cpp  assemble.h  common.cpp  common.h  eos.cpp  explode.cpp  explode.h  extract.cpp  extract.h  info.cpp  info.h  xmlstuff.cpp  xmlstuff.h
tools/: AUTHORS  Makefile.am  Makefile.common  README  configure.ac
tools/src/: Makefile.am  gff2xml.cpp  unerf.cpp  unkeybif.cpp  unnds.cpp  unrim  unrim.cpp  util.cpp  util.h
tools/src/aurora/: Makefile.am  archive.cpp  archive.h  aurorafile.cpp  aurorafile.h  biffile.cpp  biffile.h  erffile.cpp  erffile.h  error.cpp  error.h  gfffile.cpp  gfffile.h  keyfile.cpp  keyfile.h  locstring.cpp  locstring.h  ndsrom.cpp  ndsrom.h  rimfile.cpp  rimfile.h  types.h  util.cpp  util.h
tools/src/common/: endianness.h  error.cpp  error.h  file.cpp  file.h  filepath.cpp  filepath.h  noncopyable.h  singleton.h  stream.cpp  stream.h  strutil.cpp  strutil.h  system.h  types.h  ustring.cpp  ustring.h  util.cpp  util.h
tools/src/xml/: Makefile.am  gffdumper.cpp  gffdumper.h  xmlwriter.cpp  xmlwriter.h
