AC_INIT(eos, 0.0.1)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE()

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_C_CONST
AC_HEADER_STDC

AC_CHECK_FUNCS(basename)

AC_C_BIGENDIAN()

LIBXML2_MIN_VERSION=2.6.0
PKG_CHECK_MODULES(libxml2, libxml-2.0 >= ${LIBXML2_MIN_VERSION})
EOS_CXXFLAGS="$EOS_CXXFLAGS $libxml2_CFLAGS"
EOS_LIBS="$EOS_LIBS $libxml2_LIBS"

AC_SUBST(EOS_CXXFLAGS)
AC_SUBST(EOS_LIBS)

AC_OUTPUT(lib/Makefile src/Makefile Makefile)
