AM_CXXFLAGS=-ggdb -Wall -Wpointer-arith -Werror -Wno-unused-variable -fno-strict-aliasing
lib_LTLIBRARIES = libeos.la
libeos_la_SOURCES = memseg.cpp variable.cpp vartable.cpp bitfield.cpp \
                    errorhandler.cpp binreadwrite.cpp nwnfile.cpp \
                    twodafile.cpp erffile.cpp keyfile.cpp biffile.cpp \
                    gfffile.cpp ssffile.cpp tlkfile.cpp scriptevent.cpp \
                    effect.cpp scriptsituation.cpp action.cpp event.cpp \
                    moduleifo.cpp dialog.cpp area.cpp situated.cpp door.cpp \
                    placeable.cpp item.cpp waypoint.cpp trigger.cpp \
                    creature.cpp encounter.cpp sound.cpp store.cpp turd.cpp \
                    journal.cpp faction.cpp palette.cpp gamedefaults.cpp \
                    module.cpp
include_HEADERS = eos.h
libeos_la_LDFLAGS = -version-info 0:0:0
