include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = types.h \
                 error.h \
                 util.h \
                 aurorafile.h \
                 locstring.h \
                 gfffile.h

libaurora_la_SOURCES = error.cpp \
                       util.cpp \
                       aurorafile.cpp \
                       locstring.cpp \
                       gfffile.cpp
