include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = types.h \
                 error.h \
                 util.h \
                 archive.h \
                 aurorafile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 biffile.h \
                 locstring.h \
                 gfffile.h

libaurora_la_SOURCES = error.cpp \
                       util.cpp \
                       archive.cpp \
                       aurorafile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       biffile.cpp \
                       locstring.cpp \
                       gfffile.cpp
